--- a/index.html
+++ b/index.html
@@ -41,21 +41,44 @@
         box-shadow: inset 0 1px 0 0 rgb(255, 255, 255),
           inset 0 -1px 0 0 rgb(181, 179, 179);
       }
+      .quote-triangle {
+        position: absolute;
+        bottom: -10px;
+        left: 30px;
+        width: 0;
+        height: 0;
+        border-left: 10px solid transparent;
+        border-right: 10px solid transparent;
+        border-top: 10px solid #e0e0e0;
+      }
+
+      .quote-triangle::after {
+        content: "";
+        position: absolute;
+        top: -11px;
+        left: -9px;
+        width: 0;
+        height: 0;
+        border-left: 9px solid transparent;
+        border-right: 9px solid transparent;
+        border-top: 9px solid #ffffff;
+      }
     </style>
   </head>
   <body class="overflow-x-hidden">
-    <section class="border-b-[1px]">
-      <div class="flex justify-between md:items-center p-2">
+    <section class="p-5 px-9 border-b-[1px]">
+      <div class="flex justify-between md:items-center">
         <div
           class="flex flex-col md:flex-row md:justify-between items-start md:items-center justify-start"
         >
-          <p><img src="./img/logo.png" class="w-7" alt="" /></p>
-          <p class="text-redcus text-xl font-medium">Target</p>
-          <p class="text-grayBanner text-xs font-thin md:pl-5">
+          <p class="text-redcus text-2xl flex flex-row font-medium">
+            <img src="./img/logo.png" class="w-10" alt="" /> Target
+          </p>
+          <p class="text-grayBanner text-sm font-thin md:pl-5">
             Prenium landing page template
           </p>
         </div>
-        <div class="text-redcus text-xs font-medium">
+        <div class="text-redcus text-sm font-medium mr-5">
           Call Now! 1-800-123-456
         </div>
       </div>
@@ -64,10 +87,10 @@
       class="grid grid-cols-1 md:grid-cols-2 gap-10 p-4 md:p-10 border-b-[1px]"
     >
       <div>
-        <p class="font-semibold text-xs md:text-3xl">
+        <p class="font-semibold text-sm md:text-3xl">
           The perfect way to convert your traffic into sales
         </p>
-        <p class="text-grayPara text-xs">
+        <p class="text-grayPara text-sm">
           <br />
           Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam
           nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat
@@ -80,7 +103,7 @@
         <div class="flex justify-center items-center mt-5 gap-5">
           <div class="p-1 rounded-full bg-slate-100">
             <button
-              class="rounded-full bg-orange-gradient border px-4 py-2 text-darkOrange font-medium"
+              class="rounded-full bg-orange-gradient border px-10 py-2 text-darkOrange font-medium"
             >
               Purchase now!
             </button>
@@ -90,7 +113,7 @@
 
           <div class="p-1 rounded-full bg-slate-100">
             <button
-              class="rounded-full border-none bg-gray-gradient px-4 py-2 font-medium inner-shadow text-grayButton"
+              class="rounded-full border-none bg-gray-gradient px-10 py-2 font-medium inner-shadow text-grayButton"
             >
               Take a tour
             </button>
@@ -130,7 +153,7 @@
         <i class="fa-solid fa-computer fa-3x text-icon"></i>
         <div>
           <p class="font-medium">Quick and easy</p>
-          <p class="text-grayPaIcon text-xs mt-2">
+          <p class="text-grayPaIcon text-sm mt-2">
             Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam
             nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat
             volutpat.
@@ -142,7 +165,7 @@
         <i class="fa-regular fa-window-maximize fa-3x text-icon"></i>
         <div>
           <p class="font-medium">Less risky</p>
-          <p class="text-grayPaIcon text-xs mt-2">
+          <p class="text-grayPaIcon text-sm mt-2">
             Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse
             molestie consequat, vel illum dolore eu feugiat nulla facilisis at
             vero eros et accumsan
@@ -153,7 +176,7 @@
         <i class="fa-regular fa-clock fa-3x text-icon"></i>
         <div>
           <p class="font-medium">Optimize</p>
-          <p class="text-grayPaIcon text-xs mt-2">
+          <p class="text-grayPaIcon text-sm mt-2">
             Epsum factorial non deposit quid pro quo hic escorol. Olypian
             quarrels et gorilla congolium sic ad nauseum. Souvlaki ignitus
             carborundum e pluribus unum.
@@ -166,7 +189,7 @@
       <p class="font-semibold">Check out the feature</p>
       <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
         <div class="col-span-2">
-          <p class="text-grayPaIcon text-xs mt-2">
+          <p class="text-grayPaIcon text-sm mt-2">
             Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam
             nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat
             volutpat. Epsum factorial non deposit quid pro quo hic escorol.
@@ -179,18 +202,56 @@
             contendre. Gratuitous octopus niacin, sodium glutimate.
           </p>
         </div>
-        <div class="text-orangeSection4 text-xs relative">
-          <p class="border-b-[1px] py-2">Lorem ipsum dolor sit amet</p>
-          <p class="border-b-[1px] py-2">
-            Consectetuer adipiscing elit sed diam
-          </p>
-          <p class="border-b-[1px] py-2">Nibh euismod tincidunt ut</p>
-          <p class="border-b-[1px] py-2">Laoreet dolore magna aliquam erat</p>
-          <button
-            class="absolute left-[-20px] top-[13%] transform -translate-y-1/2 w-3 h-3 rounded-full bg-slate-200 border border-gray-500 flex justify-center items-center"
+        <div class="text-orangeSection4 text-sm">
+          <div
+            class="border-b-[1px] flex justify-start items-center gap-2 py-2"
           >
-            <i class="fa-solid fa-greater-than text-grayButton text-[8px]"></i>
-          </button>
+            <span
+              ><button
+                class="w-3 h-3 rounded-full bg-slate-200 border border-gray-500 flex justify-center items-center"
+              >
+                <i
+                  class="fa-solid fa-greater-than text-grayButton text-[8px]"
+                ></i></button></span
+            >Lorem ipsum dolor sit amet
+          </div>
+          <div
+            class="border-b-[1px] flex justify-start items-center gap-2 py-2"
+          >
+            <span
+              ><button
+                class="w-3 h-3 rounded-full bg-slate-200 border border-gray-500 flex justify-center items-center"
+              >
+                <i
+                  class="fa-solid fa-greater-than text-grayButton text-[8px]"
+                ></i></button
+            ></span>
+            Consectetuer adipiscing elit sed diam
+          </div>
+          <div
+            class="border-b-[1px] flex justify-start items-center gap-2 py-2"
+          >
+            <span
+              ><button
+                class="w-3 h-3 rounded-full bg-slate-200 border border-gray-500 flex justify-center items-center"
+              >
+                <i
+                  class="fa-solid fa-greater-than text-grayButton text-[8px]"
+                ></i></button></span
+            >Nibh euismod tincidunt ut
+          </div>
+          <div
+            class="border-b-[1px] flex justify-start items-center gap-2 py-2"
+          >
+            <span
+              ><button
+                class="w-3 h-3 rounded-full bg-slate-200 border border-gray-500 flex justify-center items-center"
+              >
+                <i
+                  class="fa-solid fa-greater-than text-grayButton text-[8px]"
+                ></i></button></span
+            >Laoreet dolore magna aliquam erat
+          </div>
         </div>
       </div>
     </section>
@@ -246,16 +307,32 @@
 
     <section class="p-10">
       <p class="font-semibold mb-3">See what our customers are saying...</p>
-      <div class="w-full border rounded-md p-4">
+      <!-- <div class="w-full border rounded-md p-4">
         <p class="text-grayPara text-center italic">
           ”Li Europan lingues es membres del sam familie. Lor separat existentie
           es un myth. Por scientie, musica, sport etc, li tot Europa usa li sam
           vocabularium. “
         </p>
+      </div> -->
+      <div class="font-sans">
+        <div class="relative border rounded-md">
+          <p
+            class="text-xl text-gray-600 italic leading-relaxed text-center m-5"
+          >
+            ”Li Europan lingues es membres del sam familie. Lor separat
+            existentie es un myth. Por scientie, musica, sport etc, li tot
+            Europa usa li sam vocabularium. “
+          </p>
+          <div
+            class="absolute bottom-[-10px] left-7 w-0 h-0 border-l-[10px] border-l-transparent border-r-[10px] border-r-transparent border-t-[10px] border-t-gray-300"
+          ></div>
+          <div class="quote-triangle"></div>
+        </div>
+        <p class="text-sm pl-10 pt-3">
+          Mike Tyson, <span class="italic text-gray-400">Microsoft</span>
+        </p>
       </div>
-      <p class="text-xs pl-10 pt-3">
-        Mike Tyson, <span class="italic text-gray-400">Microsoft</span>
-      </p>
+
       <div class="flex justify-center items-center mt-5 gap-5">
         <div class="p-1 rounded-full bg-slate-100">
           <button
@@ -280,7 +357,7 @@
     <section class="bg-grayBG grid grid-cols-1 md:grid-cols-9 gap-5 p-5">
       <div class="col-span-3">
         <p class="text-white mb-2">Payment method</p>
-        <p class="text-xs text-grayTextFooter">
+        <p class="text-sm text-grayTextFooter">
           Ma quande lingues coalesce, li grammatica del resultant lingue es plu
           simplic e regulari quam ti del coalescent lingues. Li nov lingua
           franca va esser plu simplic e regulari quam li existent Europan
@@ -306,14 +383,14 @@
       </div>
       <div class="col-span-2">
         <p class="text-white mb-2">Get in touch</p>
-        <p class="text-xs text-grayTextFooter">
+        <p class="text-sm text-grayTextFooter">
           123 Main Street #3 San Francisco, CA, 94101 Phone: (866) 123-4567
           ext#1 FAX: (866) 123-0000 Email: webdesign@shegy.pl
         </p>
       </div>
       <div class="col-span-2">
         <p class="text-white mb-2">Design detail</p>
-        <p class="text-xs text-grayTextFooter">
+        <p class="text-sm text-grayTextFooter">
           Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam
           nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat
           volutpat.
@@ -335,7 +412,7 @@
     <section
       class="p-5 bg-zinc-900 flex flex-col gap-5 md:flex-row justify-between"
     >
-      <p class="text-xs text-grayTextFooter">
+      <p class="text-sm text-grayTextFooter">
         Copyright © 2011 Target. All rights reserved. Design by
         <span class="italic text-darkOrange"> Shegy</span>
       </p>
