--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </style>
   </head>
   <body class="overflow-x-hidden">
-    <section class="p-5 px-9 border-b-[1px]">
+    <section class="p-5 md:px-9 border-b-[1px]">
       <div class="flex justify-between md:items-center">
         <div
           class="flex flex-col md:flex-row md:justify-between items-start md:items-center justify-start"
